--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Chennai Community App (Copy)</title>
+      <title>Chennai Community App - Events, Jobs & Local Updates</title>
+      <meta name="description" content="The ultimate community app for Chennai. Find local jobs, discover events, get live traffic/weather updates, and connect with your neighborhood." />
     </head>
 
     <body>
