--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
 
-  <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Chennai Community App - Events, Jobs & Local Updates</title>
-      <meta name="description" content="The ultimate community app for Chennai. Find local jobs, discover events, get live traffic/weather updates, and connect with your neighborhood." />
-    </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chennai Community App - Events, Jobs & Local Updates</title>
+  <meta name="description"
+    content="The ultimate community app for Chennai. Find local jobs, discover events, get live traffic/weather updates, and connect with your neighborhood." />
+  <link rel="canonical" href="https://chenn-ai.vercel.app/" />
+</head>
 
-    <body>
+<body>
   <div id="root"></div>
   <script type="module" src="/main.tsx"></script>
-    </body>
-  </html>
-  
+</body>
+
+</html>
