--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <meta name="description"
     content="The ultimate community app for Chennai. Find local jobs, discover events, get live traffic/weather updates, and connect with your neighborhood." />
   <link rel="canonical" href="https://chenn-ai.vercel.app/" />
+  <link rel="icon" type="image/png" href="/assets/app_logo.png" />
+  <link rel="apple-touch-icon" href="/assets/app_logo.png" />
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
 </head>
 
 <body>
